Fix overflowing text

--- a/style.css
+++ b/style.css
@@ -230,6 +230,10 @@ text-transform: uppercase;
 .poster-inner span {
   display: inline-block;
   width: 100%;
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .poster-inner #line5 {
